# Sonorum

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  start.bat
backend/: pyproject.toml
backend/api/: main.py
backend/backend_chord/: chord_matcher.py  chord_server.py  chords.json
backend/backend_yolo/runs/detect/train/: args.yaml  results.csv
backend/backend_yolo/src/: teste.py
backend/backend_yolo/src/core/: config.py  state_manager.py
backend/backend_yolo/src/data/: chords.json  chords.py
backend/backend_yolo/src/modules/: calc_axis.py  collect_data.py  draw_boxes.py  extract_data.py  grid_formation.py  predict_frets.py
backend/backend_yolo/src/services/: detection_pipeline.py
src/: App.tsx  index.css  main.tsx
src/components/: CameraFeed.tsx  CanvaDraw.tsx  NotesPanel.tsx
src/hooks/: useWebSocketVideo.ts
src/styles/: globals.css
src/types/: detection_yolo.ts  guitar.ts  images.d.ts  lucide-react.d.ts
