[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas-carva",email = "lucasverissimo93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.12.3,<3.0.0)",
    "aiortc (>=1.14.0,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
