[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas-carva",email = "lucasverissimo93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.12.3,<3.0.0)",
    "aiortc (>=1.14.0,<2.0.0)",
    "numpy (>=2,<2.3.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "ultralytics (>=8.3.220,<9.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "onnx (>=1.19.0,<2.0.0)",
    "onnxruntime (>=1.23.0,<2.0.0)",
    "onnxslim (>=0.1.70,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
